# dragonboard-hardware-verification

./: .gitignore  CMakeLists.txt  LICENSE  SOURCE_THIS  Toolchain-sdk-apq8016e.cmake  build.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/components/: CMakeLists.txt
src/components/als/: CMakeLists.txt  als.cpp  als.hpp
src/components/axl/: CMakeLists.txt  axl.cpp  axl.hpp
src/components/battery_charger/: CMakeLists.txt  battery_charger.cpp  battery_charger.hpp
src/components/bq25898/: CMakeLists.txt  bq25898.cpp
src/components/digital_ambient_light_sensor/: CMakeLists.txt  digital_ambient_light_sensor.cpp  digital_ambient_light_sensor.hpp
src/components/display_deserializer/: CMakeLists.txt  display_deserializer.cpp  display_deserializer.hpp
src/components/drv3605/: CMakeLists.txt  drv3605.cpp  drv3605.hpp
src/components/infrared/: CMakeLists.txt  SOURCE_THIS  build.sh  eva_ir_hw_max610.c  infraredTest  infrared_test.c  infrared_test.cpp  uart_test.c  uart_test.h
src/components/maxq610/: CMakeLists.txt  maxq610.hpp
src/components/spq0410hr5hb/: CMakeLists.txt  spq0410hr5hb.hpp
src/components/tps4348/: CMakeLists.txt
src/devices/als/: als.cpp  als.hpp
src/devices/axl/: axl.cpp  axl.hpp
src/devices/bq25898/: bq25898.cpp  bq25898.hpp
src/devices/drv3605/: CMakeLists.txt  drv3605.cpp  drv3605.hpp
src/devices/maxq610/: CMakeLists.txt  maxq610.cpp  maxq610.hpp
src/devices/spq0410hr5hb/: CMakeLists.txt  spq0410hr5hb.cpp  spq0410hr5hb.hpp
src/devices/tps4348/: tps4348.cpp  tps4348.hpp
src/features/: CMakeLists.txt
src/features/backlight/: CMakeLists.txt  backlight.cpp  backlight.hpp
src/features/fuel_gauge/: CMakeLists.txt  fuel_gauge.cpp  fuel_gauge.hpp
src/features/self-test/: CMakeLists.txt  self_test.cpp  self_test.hpp
src/interface/: CMakeLists.txt
src/interface/coreadc/: CMakeLists.txt  adc.cpp  core_adc.hpp
src/interface/coregpio/: CMakeLists.txt  core_gpio.cpp  core_gpio.hpp
src/interface/corei2c/: CMakeLists.txt  core_i2c.cpp  core_i2c.hpp  main.cpp
src/interface/corei2s/: CMakeLists.txt  core_i2s.cpp  core_i2s.hpp
src/interface/coremipi/: CMakeLists.txt  core_mipi.cpp  core_mipi.hpp
src/interface/corespi/: CMakeLists.txt  core_spi.cpp  core_spi.hpp
src/interface/coreuart/: CMakeLists.txt  core_uart.cpp  core_uart.hpp  main.cpp
src/test/: CMakeLists.txt  axl_test.cpp  digital_ambient_light_sensor_test.cpp  gpioTest.cpp  spiTest.cpp
src/ui/: CMakeLists.txt
src/ui/menu/: CMakeLists.txt  Menu.cpp  Menu.hpp
src/wireless/: CMakeLists.txt
src/wireless/WiFi/: CMakeLists.txt  wifi.cpp  wifi.hpp
src/wireless/bluetooth/: Bluetooth.cpp  Bluetooth.hpp  CMakeLists.txt
